--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.1",
+    "firebase": "^10.4.0",
+    "firebase-tools": "^12.6.2",
+    "global": "^4.4.0",
+    "md5-hash": "^1.0.1",
+    "openai": "^4.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
