--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "firebase-tools": "^12.6.2",
     "global": "^4.4.0",
     "md5-hash": "^1.0.1",
-    "openai": "^4.11.1",
+    "openai": "4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
