add upload image

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 URL_APP=https://jsonplaceholder.typicode.com
 URL_POKE=https://pokeapi.co/api/v2
-OPEN_AI_KEY=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
+
+URL_PRODUCTS=https://6523e69dea560a22a4e9019e.mockapi.io/api/v1/
